Adding a work: basic adding of work and chapter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,8 +46,10 @@ signup.error=Error during signup
 signup.error_exists=User with this username already exists
 signup.error_date=Invalid birth date
 
+profile.language.label=Language
 profile.language.en=English
 profile.language.ru=Russian
+profile.theme.label=Theme
 profile.theme.light=Light
 profile.theme.dark=Dark
 
@@ -63,9 +65,9 @@ work.rating.nc_17=Explicit (not recommended for people under 17)
 
 work.category=Category:
 work.category.gen=Gen
-work.category.f_f=F/F
-work.category.m_f=M/F
-work.category.m_m=M/M
+work.category.f_f=F / F
+work.category.m_f=M / F
+work.category.m_m=M / M
 work.category.mixed=Mixed
 work.category.other=Other
 
@@ -78,6 +80,10 @@ work.category.types.theater_and_musicals=Theater & Musicals
 work.category.types.real_people=Celebrities & Real people
 work.category.types.original=Original
 work.category.types.other=Other
+
+work.size=Size
+work.size.chapters=chapters
+work.size.words=words
 
 work.tags=Tags
 
@@ -94,6 +100,10 @@ authors.popular=Popular authors
 
 home.works.search=Search
 home.works.add_fic=Add work
+home.works.edit=Edit
+home.works.delete=Delete
+home.works.add_chapter=Add chapter
+home.works.chapters=Chapters
 
 home.add_fic.label=Add new work
 home.add_fic.name=Name
@@ -108,3 +118,13 @@ home.add_fic.tags.add=Add new tag
 home.add_fic.description=Description
 home.add_fic.comment=Comment
 home.add_fic.save=Save
+
+error.something_went_wrong=Something went wrong. Try again.
+
+home.add_chapter.label=Add new chapter to work
+home.add_chapter.name=Chapter name
+home.add_chapter.default_name=Part
+home.add_chapter.default_name.hint=If you leave name empty, it will be defined by default
+home.add_chapter.text=Text
+home.add_chapter.notes=Notes
+home.add_chapter.status=Work status
