--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -89,12 +89,18 @@ work.tags=Tags
 
 work.fandom_type.undefined=Failed to define fandom type
 
+
 list.work.empty=No works have been added yet :(
 list.work.my_works.empty=You haven't uploaded any works yet :(
 list.author.empty=No user has uploaded their works yet :(
 list.tag.empty=No tags have been found :(
 list.tag.all=All tags
 list.fandom.empty=No fandom has been found :(
+list.chapters.empty=Seems like no chapters have been uploaded to this work...
+list.chapters.contents=Contents
+list.chapters.contents.back=Back to contents
+list.chapters.prev=Previous chapter
+list.chapters.next=Next chapter
 
 authors.popular=Popular authors
 
@@ -119,6 +125,13 @@ home.add_fic.description=Description
 home.add_fic.comment=Comment
 home.add_fic.save=Save
 
+home.edit.label=Edit
+home.edit.name.attention=Attention!
+home.edit.name.text.work=By changing name you will create a new work.
+home.edit.name.text.chapter=By changing name you will create a new chapter.
+home.edit.chapter.a=Editing chapter
+home.edit.chapter.b=of
+
 error.something_went_wrong=Something went wrong. Try again.
 
 home.add_chapter.label=Add new chapter to work
@@ -128,3 +141,7 @@ home.add_chapter.default_name.hint=If you leave name empty, it will be defined b
 home.add_chapter.text=Text
 home.add_chapter.notes=Notes
 home.add_chapter.status=Work status
+
+home.delete.question=Are you sure you want to delete this?
+home.delete.yes=Yes
+home.delete.cancel=Cancel
