--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,11 +72,13 @@ work.category.mixed=Mixed
 work.category.other=Other
 
 work.category.types=Categories
+work.category.types.fandom=Fandom
 work.category.types.anime_and_manga=Anime & manga
 work.category.types.books=Books
 work.category.types.cartoons_and_comic_books=Cartoons & Comic books
 work.category.types.games=Video games
 work.category.types.theater_and_musicals=Theater & Musicals
+work.category.types.movies_and_series=Movies & Series
 work.category.types.real_people=Celebrities & Real people
 work.category.types.original=Original
 work.category.types.other=Other
@@ -89,13 +91,13 @@ work.tags=Tags
 
 work.fandom_type.undefined=Failed to define fandom type
 
-
 list.work.empty=No works have been added yet :(
 list.work.my_works.empty=You haven't uploaded any works yet :(
 list.author.empty=No user has uploaded their works yet :(
 list.tag.empty=No tags have been found :(
 list.tag.all=All tags
 list.fandom.empty=No fandom has been found :(
+
 list.chapters.empty=Seems like no chapters have been uploaded to this work...
 list.chapters.contents=Contents
 list.chapters.contents.back=Back to contents
@@ -106,8 +108,6 @@ authors.popular=Popular authors
 
 home.works.search=Search
 home.works.add_fic=Add work
-home.works.edit=Edit
-home.works.delete=Delete
 home.works.add_chapter=Add chapter
 home.works.chapters=Chapters
 
@@ -115,12 +115,17 @@ home.add_fic.label=Add new work
 home.add_fic.name=Name
 home.add_fic.type=Type
 home.add_fic.type.fandom=Fandom
-home.add_fic.type.fandom.search=Fandoms
-home.add_fic.type.fandom.add=Add new fandom
+home.add_fic.type.fandom.hint=If you need help choosing a fandom, check to FAQ tab. \
+  P.S. if you choose Original as fandom type, you cannot choose anything else. \
+  P.P.S. check FAQ tab to learn why.
+home.add_fic.type.fandom.search=Search for fandom...
+home.add_fic.type.fandom.add=Create new fandom in
 home.add_fic.rating=Rating
 home.add_fic.category=Category
 home.add_fic.tags=Tags
-home.add_fic.tags.add=Add new tag
+home.add_fic.tags.search=Search for tags...
+home.add_fic.tags_and_fandoms.pattern=Accepted if it consists of english or russian letters, braces (like these -> () ) and &
+home.add_fic.tags.add=Create new tag
 home.add_fic.description=Description
 home.add_fic.comment=Comment
 home.add_fic.save=Save
