COMMENTS: adding done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,11 @@ success.title=Success page
 success.head=Success!
 success.body=Мои подзравления!
 
+mainpage.top.update=Most recent works
+mainpage.top.update.all=All works sorted by last update time
+mainpage.top.popular=The most popular works
+mainpage.top.popular.all=All works sorted by users' assessments
+
 login.username=Username
 login.password=Password
 login.button=Log in
@@ -52,6 +57,8 @@ profile.language.ru=Russian
 profile.theme.label=Theme
 profile.theme.light=Light
 profile.theme.dark=Dark
+
+work.author=Author
 
 work.state=State:
 work.state.complete=Complete
@@ -91,7 +98,7 @@ work.tags=Tags
 
 work.fandom_type.undefined=Failed to define fandom type
 
-list.work.empty=No works have been added yet :(
+list.work.empty=No works for you, sorry :(
 list.work.my_works.empty=You haven't uploaded any works yet :(
 list.author.empty=No user has uploaded their works yet :(
 list.tag.empty=No tags have been found :(
@@ -103,6 +110,11 @@ list.chapters.contents=Contents
 list.chapters.contents.back=Back to contents
 list.chapters.prev=Previous chapter
 list.chapters.next=Next chapter
+
+list.page.page=Page
+list.page.of=of
+list.page.prev=Previous
+list.page.next=Next
 
 authors.popular=Popular authors
 
@@ -150,3 +162,13 @@ home.add_chapter.status=Work status
 home.delete.question=Are you sure you want to delete this?
 home.delete.yes=Yes
 home.delete.cancel=Cancel
+
+comment.comments=Comments
+comment.comments.all=All comments
+comment.comments.empty=No one has left a comment yet
+comment.form.response=Response for
+comment.form.placeholder=Your comment...
+comment.form.nonempty=You cannot save empty comment!
+comment.form.save=Save comment
+
+
