--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -17,7 +17,12 @@ error.body=Кажется, что-то ужасное случилось, изв
 
 success.title=Успех
 success.head=Успешно!
-success.body=Congratulations!
+success.body=Поздравляшки!
+
+mainpage.top.update=Самые новые работы
+mainpage.top.update.all=Все работы по дате добавления
+mainpage.top.popular=Работы с самыми высокими оценками
+mainpage.top.popular.all=Все работы по пользовательским оценкам
 
 login.username=Имя пользователя
 login.password=Пароль
@@ -52,6 +57,8 @@ profile.language.ru=Русский
 profile.theme.label=Тема
 profile.theme.light=Светлая
 profile.theme.dark=Темная
+
+work.author=Автор
 
 work.state=Состояние:
 work.state.complete=Завершен
@@ -91,7 +98,7 @@ work.tags=Теги
 
 work.fandom_type.undefined=Не вышло определить тип фандома
 
-list.work.empty=Пока не было загружено ни одной работы :(
+list.work.empty=Мы не нашли для вас работ, извините :(
 list.work.my_works.empty=Вы пока не загрузили ни одной работы :(
 list.author.empty=Пока ни один пользователь не загрузил свои работы :(
 list.tag.empty=Не найдено ни одного тега :(
@@ -103,6 +110,11 @@ list.chapters.contents=Оглавление
 list.chapters.contents.back=Обратно к оглавлению
 list.chapters.prev=Предыдущая глава
 list.chapters.next=Следующая глава
+
+list.page.page=Страница
+list.page.of=из
+list.page.prev=Назад
+list.page.next=Далее
 
 authors.popular=Популярные авторы
 
@@ -150,3 +162,11 @@ home.add_chapter.status=Статус работы
 home.delete.question=Вы уверены, что хотите удалить это?
 home.delete.yes=Да
 home.delete.cancel=Отмена
+
+comment.comments=Комментарии
+comment.comments.all=Все комментарии
+comment.comments.empty=Пока никто не оставил комментарий
+comment.form.response=Ответ для
+comment.form.placeholder=Ваш комментарий...
+comment.form.nonempty=Нельзя отправить пустой комментарий!
+comment.form.save=Сохранить комментарий
