--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -19,6 +19,10 @@ success.title=Успех
 success.head=Успешно!
 success.body=Поздравляшки!
 
+not_ready.title=Не готово
+not_ready.head=Эта страница еще не готова
+not_ready.body=Пожалуйста, посмотрите остальное :(
+
 mainpage.top.update=Самые новые работы
 mainpage.top.update.all=Все работы по дате добавления
 mainpage.top.popular=Работы с самыми высокими оценками
@@ -99,7 +103,10 @@ work.tags=Теги
 work.fandom_type.undefined=Не вышло определить тип фандома
 
 list.work.empty=Мы не нашли для вас работ, извините :(
-list.work.my_works.empty=Вы пока не загрузили ни одной работы :(
+list.work.all=Все работы
+list.work.sorted=Сортировка по
+list.work.sorted.update=времени последнего обновления
+list.work.sorted.popular=оценкам пользователей
 list.author.empty=Пока ни один пользователь не загрузил свои работы :(
 list.tag.empty=Не найдено ни одного тега :(
 list.tag.all=Все теги
