--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -179,4 +179,8 @@ comment.form.placeholder=Your comment...
 comment.form.nonempty=You cannot save empty comment!
 comment.form.save=Save comment
 
+assessment.question=How would you rate this work?
+assessment.thanks=Thank you for the rating!
+assessment.info=Authors cannot rate their own works.
+
 
