--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -177,3 +177,7 @@ comment.form.response=Ответ для
 comment.form.placeholder=Ваш комментарий...
 comment.form.nonempty=Нельзя отправить пустой комментарий!
 comment.form.save=Сохранить комментарий
+
+assessment.question=Как бы вы оценили данную работу?
+assessment.thanks=Спасибо за оценку!
+assessment.info=Авторы не могут оценивать свои же работы.
