PROFILE editing done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,8 @@ login.error=Error during login
 
 signup.email=Email
 signup.username=Username
+signup.username.hint=Username may contain latin letters, cyrillic letters and underscore.
+signup.username.warning=You cannot change it later, so choose wisely!
 signup.password=Password
 signup.confirm_password=Confirm password
 signup.passwords_different=Passwords doesn't match
@@ -182,5 +184,20 @@ comment.form.save=Save comment
 assessment.question=How would you rate this work?
 assessment.thanks=Thank you for the rating!
 assessment.info=Authors cannot rate their own works.
+
+profile.head.last_seen=Last login
+profile.head.birthday=Birthday
+profile.head.about=About
+profile.head.achievements=Achievements
+profile.head.achievements.empty=This user has no achievements
+profile.body.works=User's works
+profile.body.works.empty=This user hasn't uploaded any work yet
+
+profile.edit.title=Edit profile
+profile.edit.change=Edit fields below
+profile.edit.change.password=Change password
+profile.edit.change.username.hint=Username must be unique!
+profile.edit.see=How others see my profile
+profile.edit.apply=Apply changes
 
 
