--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -40,6 +40,8 @@ login.error=Ошибка при входе
 
 signup.email=Электронная почта
 signup.username=Имя пользователя
+signup.username.hint=Имя пользователя может содержать буквы латинского алфавита, кириллицы и нижнее подчеркивание.
+signup.username.warning=Потом вы не сможете его изменить, так что выбирайте с умом!
 signup.password=Пароль
 signup.confirm_password=Подтверждение пароля
 signup.passwords_different=Пароли не совпадают
@@ -181,3 +183,18 @@ comment.form.save=Сохранить комментарий
 assessment.question=Как бы вы оценили данную работу?
 assessment.thanks=Спасибо за оценку!
 assessment.info=Авторы не могут оценивать свои же работы.
+
+profile.head.last_seen=Заходил в сеть
+profile.head.birthday=День рождения
+profile.head.about=О себе
+profile.head.achievements=Достижения
+profile.head.achievements.empty=У этого пользователя пока нет достижений
+profile.body.works=Работы пользователя
+profile.body.works.empty=Этот пользователь еще не загрузил ни одной работы
+
+profile.edit.title=Редактировать профиль
+profile.edit.change=Редактируйте поля ниже
+profile.edit.change.password=Сменить пароль
+profile.edit.change.username.hint=Имя пользователя должно быть уникальным!
+profile.edit.see=Как другие видят мой профиль
+profile.edit.apply=Применить изменения
