--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ not_ready.title=Not ready
 not_ready.head=This page is not ready yet
 not_ready.body=Check other stuff please :(
 
+mainpage.tags=Popular tags
 mainpage.top.update=Most recent works
 mainpage.top.update.all=All works sorted by last update time
 mainpage.top.popular=The most popular works
@@ -106,9 +107,11 @@ work.fandom_type.undefined=Failed to define fandom type
 
 list.work.empty=No works for you, sorry :(
 list.work.all=All works
-list.work.sorted=Sorted by
-list.work.sorted.update=last update time
-list.work.sorted.popular=users' assessments
+list.work.sorted=Sorted
+list.work.sorted.not=not
+list.work.sorted.update=by last update time
+list.work.sorted.popular=by users' assessments
+list.work.sorted.tag=by tag
 list.work.my_works.empty=You haven't uploaded any works yet :(
 list.author.empty=No user has uploaded their works yet :(
 list.tag.empty=No tags have been found :(
